--- a/style.css
+++ b/style.css
@@ -69,3 +69,25 @@ body {
     width: 125px;
     transition: 0.4s ease;
 }
+
+.box::after {
+    content: '';
+    background-color: #f6e58d;
+    position: absolute;
+    top: 8px;
+    right: -15px;
+    height: 100%;
+    transform: skewY(45deg);
+
+}
+
+.box::before {
+    content: '';
+    background-color: #f9ca24;
+    position: absolute;
+    bottom: -15px;
+    left: 8px;
+    height: 15px;
+    width: 100%;
+    transform: skewX(45deg);
+}
