--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: 'Robot', sans-serif;
+    font-family: 'Roboto', sans-serif;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -51,7 +51,7 @@ body {
     transition: 0.4s ease;
 }
 
-.boxes .big {
+.boxes.big {
     width: 600px;
     height: 600px;
 }
@@ -61,10 +61,9 @@ body {
 }
 
 .box {
-    background-image: url("https: //media.giphy.com/media/EZqwsBSPlvSda/giphy.gif");
+    background-image: url("https://media.giphy.com/media/EZqwsBSPlvSda/giphy.gif");
     background-repeat: no-repeat;
     background-size: 500px 500px;
-    position: relative;
     height: 125px;
     width: 125px;
     transition: 0.4s ease;
